fixed department admin contollers
